--- a/a/chainfeeds_kafka_project/scrapy.cfg
+++ b/a/chainfeeds_kafka_project/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = chainfeeds_spider.settings
+default = chainfeeds_kafka_project.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = chainfeeds_spider
+project = chainfeeds_kafka_project
